[gd_scene load_steps=2 format=3 uid="uid://bsh0p5c3n3"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_shop"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MainContainer/Header"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "< Back"

[node name="Title" type="Label" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 36
text = "SHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsContainer" type="HBoxContainer" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 2

[node name="CoinIcon" type="Label" parent="MainContainer/Header/CoinsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 24
text = "coins"
vertical_alignment = 1

[node name="CoinAmount" type="Label" parent="MainContainer/Header/CoinsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = " 0"
vertical_alignment = 1

[node name="HeaderSpacer" type="Control" parent="MainContainer/Header"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CategoryTabs" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 4

[node name="FooterTooltip" type="PanelContainer" parent="MainContainer"]
visible = false
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="TooltipContent" type="VBoxContainer" parent="MainContainer/FooterTooltip"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TopRow" type="HBoxContainer" parent="MainContainer/FooterTooltip/TooltipContent"]
layout_mode = 2

[node name="UpgradeName" type="Label" parent="MainContainer/FooterTooltip/TooltipContent/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "Upgrade Name"

[node name="RankLabel" type="Label" parent="MainContainer/FooterTooltip/TooltipContent/TopRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_font_sizes/font_size = 22
text = "Rank 0/5"

[node name="Description" type="Label" parent="MainContainer/FooterTooltip/TooltipContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
theme_override_font_sizes/font_size = 20
text = "Upgrade description goes here"
autowrap_mode = 2

[node name="BenefitLabel" type="Label" parent="MainContainer/FooterTooltip/TooltipContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Current: +0% | Next: +10%"

[node name="Spacer" type="Control" parent="MainContainer/FooterTooltip/TooltipContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomRow" type="HBoxContainer" parent="MainContainer/FooterTooltip/TooltipContent"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CostLabel" type="Label" parent="MainContainer/FooterTooltip/TooltipContent/BottomRow"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Cost: 100"
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="MainContainer/FooterTooltip/TooltipContent/BottomRow"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "UPGRADE"

[node name="RefundButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Refund All Upgrades"

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Refund"
initial_position = 1
size = Vector2i(400, 150)
ok_button_text = "Refund"
dialog_text = "Are you sure you want to refund all upgrades?
You will get back all coins spent."
